fix specificity of center align for indicator; add space below detail nav

--- a/client/devel.less
+++ b/client/devel.less
@@ -145,6 +145,10 @@ button {
   }
 }
 
+.dev-detail-nav {
+  margin-bottom: 10px;
+}
+
 .dev-detail-body .join-or-leave, .dev-detail-body .game-summary, .dev-detail-body .organizers-note, .dev-detail-body .whos-playing-summary {
   margin: 10px 0;
 }
@@ -158,7 +162,7 @@ button {
   right: 20px;
 }
 
-.game-type-indicator {
+.dev-detail-nav .game-type-indicator {
   /* This is a hacky way to center align; needs different solution */
   margin-left: 70px;
 }
